--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>HappyFit</title>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0;">
   <noscript>Você precisa ativar o JavaScript para rodar a aplicação.</noscript>
   <div id="root"></div>
 
